--- a/layout.css
+++ b/layout.css
@@ -34,3 +34,32 @@
     " footer    footer  footer  footer"
     ;
 }
+
+
+
+@media screen and (max-width: 576px) {
+    .container{
+        grid-template-areas: 
+        "header"
+        "nav"
+        "main"
+        "sidebar"
+        "advertise"
+        "footer"
+        ;
+    }
+}
+
+
+@media screen and (min-width: 577px) and (max-width: 992px) {
+    .container{
+        grid-template-areas: 
+        "header header header"
+        "nav nav nav"
+        
+        "sidebar main main"
+        "advertise footer footer"
+        
+        ;
+    }
+}
